--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,10 +1,27 @@
-databases[postgresql]==0.6.2
-psycopg2-binary==2.9.5
-SQLAlchemy==1.4.41
+anyio==4.2.0
 asyncpg==0.27.0
+attrs==23.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+databases==0.6.2
 fastapi==0.87.0
-uvicorn==0.20.0
-
-# dev
-pytest==7.2.0
+h11==0.14.0
+httpcore==0.16.3
 httpx==0.23.1
+idna==3.6
+iniconfig==2.0.0
+lotify==2.3.4
+packaging==23.2
+pluggy==1.4.0
+psycopg2-binary==2.9.5
+pydantic==1.10.14
+pytest==7.2.0
+requests==2.31.0
+rfc3986==1.5.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+starlette==0.21.0
+typing_extensions==4.9.0
+urllib3==2.2.0
+uvicorn==0.20.0
